# ocr-win-rs

./: Cargo.toml
src/: main.rs
