[package]
name = "ocr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "0.3"

[dependencies.clap]
version = "3"
features = ["derive"]

[dependencies.windows]
version = "0.33.0"
features = [
    "alloc",
    "Media_Ocr",
    "Foundation",
    "Graphics_Imaging",
    "Globalization",
    "Storage_Streams",
]
